# vite_translate

./: .gitignore  .gitmodules  README.md  pubspec.yaml
.fvm/: flutter_sdk
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/vibetranslate/vibe_translate/: MainActivity.kt
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/core/: constants.dart  errors.dart  language_codes.dart
lib/models/: conversation_message.dart  language.dart  transcription_result.dart
lib/services/: conversation_engine.dart  model_manager.dart
lib/services/asr/: whisper_bindings.dart  whisper_isolate.dart  whisper_service.dart
lib/services/audio/: audio_player_service.dart  audio_recorder.dart  audio_saver.dart  audio_stream_controller.dart  test_audio_service.dart  vad_service.dart
lib/services/translation/: translation_isolate.dart  translation_service.dart
lib/state/: conversation_state.dart  engine_state.dart  settings_state.dart
lib/ui/: theme.dart
lib/ui/screens/: conversation_screen.dart  onboarding_screen.dart  settings_screen.dart
lib/ui/widgets/: language_badge.dart  language_picker.dart  message_bubble.dart  partial_transcription.dart  recording_indicator.dart
native/: CMakeLists.txt  vibe_translate_native.podspec
native/android/: CMakeLists.txt
native/bridge/: ct2_bridge.cpp  ct2_bridge.h  sentencepiece_bridge.cpp  sentencepiece_bridge.h  whisper_bridge.c  whisper_bridge.h
scripts/: build_ios_whisper.sh  convert_nllb.py  download_models.sh  export_nllb_onnx.py
test/: widget_test.dart
